...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <include
            layout="@layout/text_field_conflict"
            android:id="@+id/fragment_scaled_unit_form_scale"/>

    <include
            layout="@layout/spinner_conflict"
            android:id="@+id/fragment_scaled_unit_form_unit"/>
</LinearLayout>

