...

<menu
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_check"
        android:icon="@drawable/ic_check_white_24dp"
        android:orderInCategory="100"
        android:title="@string/action_save"
        app:showAsAction="ifRoom" />
</menu>

