...
    <string name="dialog_food_was_removed_from_shopping_list">Food was removed from shopping list</string>
    <string name="dialog_conflicting_description">The description has been edited by someone else. Merge the original text, the other person\'s text and your own text now.</string>
    <string name="dialog_new_unit">Create new unit</string>
    <string name="dialog_recipe_was_deleted">Recipe was deleted</string>
    <string name="dialog_recipe_item">%s (Stock: %s)</string>

    <string name="error_may_not_be_empty">Give input here</string>
    <string name="error_no_id">ID has to be filled in</string>
    <string name="error_no_location_present">Please create a location first</string>
    <string name="error_wrong_name_format">Name may not contain: $ =</string>
    <string name="error_location_foreign_key_violation">%1$s still contains food items. Do you want to delete all the items, too?</string>
    <string name="error_location_changed">The location was renamed from %1$s to %2$s. Do you still want to delete it?</string>
    <string name="error_location_changed_twice">The location with original name %1$s was renamed to %2$s by you and to %3$s by someone else. Do you want to apply your name?</string>
...
